--- a/QRCodes/7.html
+++ b/QRCodes/7.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL=http://www.google.com"> 
+<meta http-equiv="refresh" content="0;URL=https://docs.google.com/document/d/1xOsN0mXqRozBrsZABBl-znrZNUpCA4qP9iPBxA1QvEQ/edit"> 
